--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,13 +31,15 @@
 
 	  			<br><br>
 
-					<input type="button" id="boton1" value="opcion 1" onclick="">			
-					<input type="submit" id="boton2" value="opcion 2" onclick="">
+					<input type="button" id="boton1" value="opcion 1" onclick="">
+
+					<input type="submit" id="boton2" value="opcion 2" onclick="btn2();">
 					<input type="submit" id="boton3" value="opcion 3" onclick="">
 
 				<br><br>
 
 				<input type="text" name="txt_name" id="txt1" size="25.3" placeholder="Ingrese sus nombres y apellidos">
+				
 				<input type="text" name="txt_name" id="txt2" size="25.3" placeholder="Identidicación">
 
 				<br><br>
@@ -45,8 +49,19 @@
 
 				<br><br>
 
+				<table table align="center">
+					<tr>
+						<td id="tabletext3">
+							<font id="textprest"> </font>
+						</td>
+					</tr>
+				</table>
+
+				<br> <br>
+
 
 	  		</div>
+			  <script type="text/javascript" src="js/funcion.js"></script>
 
 </body>
 </html>
